name:                hstorrent
version:             0.1.0.0
synopsis:            BitTorrent library in Haskell
description:         BitTorrent library in Haskell
homepage:            https://github.com/hstorrent/hstorrent
license:             BSD3
license-file:        LICENSE
author:              AUTHORS
maintainer:          fuuzetsu@fuuzetsu.co.uk
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/hstorrent/hstorrent.git

library
  exposed-modules:
    Network.HsTorrent
    Network.HsTorrent.BinaryStrict
    Network.HsTorrent.Handshake
    Network.HsTorrent.Message
    Network.HsTorrent.TorrentParser

  build-depends:
      base >=4.5 && <5
    , bencoding
    , binary
    , bytestring
    , data-default
    , lens
    , QuickCheck == 2.*
    , quickcheck-instances

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall

  other-modules:
    Network.HsTorrent.HandshakeSpec
    Network.HsTorrent.MessageSpec
    Network.HsTorrent.TorrentParserSpec

  build-depends:
      base
    , bencoding
    , binary
    , bytestring
    , data-default
    , directory
    , filepath
    , hspec >= 2.0.1
    , hspec-contrib
    , hstorrent
    , HUnit
    , lens
    , QuickCheck == 2.*
    , quickcheck-instances

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          MainBenchmarkSuite.hs
  hs-source-dirs:   bench, src
  ghc-options:      -Wall

  build-depends:
      base >=4.5 && <5
    , criterion
    , random
